--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,13 @@
+2013-11-01  Jeffery To  <jeffery.to@gmail.com>
+
+	0.3.2:
+
+	* Added a toggle button to the fullscreen toolbar
+
 2013-10-31  Jeffery To  <jeffery.to@gmail.com>
 
 	0.3.1, a "minor" release:
+
 	* When toggling text wrapping, use the user's preferred wrap mode
 	  (from preferences) when possible
 	* Fixed toggle state when the user changes their text wrapping
